# ShortifyProject

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  crud.py  docker-compose.prod.yaml  docker-compose.yaml  exceptions.py  main.py  pyproject.toml  requirements.txt  service.py
app/: main.py
app/api/routes/: urls.py
app/core/: config.py  database.py
app/exceptions/: __init__.py  url_exceptions.py
app/middleware/: rate_limiter.py
app/models/: __init__.py  url.py
app/repositories/: url_repository.py
app/schemas/: url.py
app/services/: url_service.py
database/: db.py  models.py
frontend/: README.md  dev_server.py  index.html  nginx.conf  package.json  redirect.html
frontend/css/: styles.css
frontend/js/: api.js  app.js
migrations/: env.py
migrations/versions/: 546bab5309e8_initial_migration.py  add_index_long_url.py
tests/: conftest.py  test_api.py  test_service.py
